--- a/src/app/comun/panel-control/panel-control.component.html
+++ b/src/app/comun/panel-control/panel-control.component.html
@@ -3,7 +3,7 @@
 <!--       Panel Control   -->
 <!--   ******************* -->
 
-<div class="contenedorPanelControl">
+<div *ngIf="habilitar" class="contenedorPanelControl">
 
 	<!-- Boton Central -->
 	<div class="contenedorBotonCentral" >
