--- a/src/app/comun/configuracion/configuracion.component.sass
+++ b/src/app/comun/configuracion/configuracion.component.sass
@@ -28,8 +28,8 @@
 
     .frame
         position: absolute
-        top: 0 
-        left: 0 
+        top: 0
+        left: 0
         padding-top: 5%
         margin-top: -2.5%
         padding-left: 3%
@@ -37,7 +37,7 @@
         width: 100%
         height: 100%
         background-image: url("../../../assets/Frames/Frame-Dialogo.png")
-        background-size: 100% 100% 
+        background-size: 100% 100%
 
     .title
         margin-top: 20px
@@ -78,7 +78,8 @@
         .opcionesGenerales
             position: relative
             display: flex
-            flex-direction: column
+            flex-direction: row
+            flex-wrap: wrap
             justify-content: space-around
             align-items: center
             width: 100%
