--- a/src/app/comun/enemigo/enemigo.component.sass
+++ b/src/app/comun/enemigo/enemigo.component.sass
@@ -6,7 +6,7 @@
   position: absolute
   height: 100%
   aspect-ratio: 1
-  
+
 .contenedorEnemigo
   position: absolute
   width: 100%
@@ -23,13 +23,20 @@
       height: 100%
       width: 100%
 
+    .marcaColor
+      position: absolute
+      height: 20%
+      width: 20%
+      bottom: 0
+      right: 0
+
     .frameImagen
         position: absolute
         width: 100%
         height: 100%
         background-image: url("../../../assets/Frames/Frame-Enemigo.png")
-        background-size: 100% 100% 
-    
+        background-size: 100% 100%
+
   .wrapperDesplegable
     position: absolute
     top: 0
@@ -55,7 +62,7 @@
         width: 100%
         height: 100%
         background-image: url("../../../assets/Frames/Frame-Detalle-Enemigo.png")
-        background-size: 100% 100% 
+        background-size: 100% 100%
 
     .nombreEnemigo
       position: absolute
@@ -69,7 +76,7 @@
       height: 20%
       top: 30%
 
-    .Buffos-DeBuffos-Enemigo 
+    .Buffos-DeBuffos-Enemigo
       position: absolute
       display: flex
       justify-content: center
@@ -77,7 +84,7 @@
       top: 60%
       height: 32px
       width: 90%
-      min-height: 32px 
+      min-height: 32px
 
       .contenedorBuffo
         position: relative
@@ -91,9 +98,9 @@
           z-index: 2
           justify-content: center
           align-items: center
-          color: black 
+          color: black
 
-        .Buffo-Enemigo 
+        .Buffo-Enemigo
           position: absolute
           top: 0
           left: 0
@@ -102,8 +109,8 @@
           line-height: 32px
           color: black
           text-align: center
-          padding-top: 100% 
-          overflow: hidden 
+          padding-top: 100%
+          overflow: hidden
 
         .buff
           border: 2px solid green
@@ -116,87 +123,87 @@
 $highlightTurnoColor: $colorFondo1
 $highlightObjetivoColor: red
 
-.Turno 
+.Turno
   background: $highlightTurnoColor
   animation: highlightTurno
   animation-duration: 1s
   animation-iteration-count: infinite
-  animation-direction: alternate 
+  animation-direction: alternate
 
 .seleccionable
   z-index: 21 !important
 
-.Offline 
+.Offline
   background-color: gold
-   
 
-@keyframes highlightTurno 
-  0% 
-    background: $highlightTurnoColor 
-  100% 
-    background: rgba(211, 211, 211, 0)  
 
-.ObjetivoEnemigo 
+@keyframes highlightTurno
+  0%
+    background: $highlightTurnoColor
+  100%
+    background: rgba(211, 211, 211, 0)
+
+.ObjetivoEnemigo
   border-color: red
   border-style: ridge
   animation: highlightObjetivoEnemigo
   animation-duration: 1s
   animation-iteration-count: infinite
-  animation-direction: alternate 
+  animation-direction: alternate
 
-.ObjetivoAuxiliarEnemigo 
+.ObjetivoAuxiliarEnemigo
   border-color: orange
   border-style: dashed
   animation: highlightObjetivoEnemigoAuxiliar
   animation-duration: 1s
   animation-iteration-count: infinite
-  animation-direction: alternate 
+  animation-direction: alternate
 
-.ObjetivoAuxiliarEnemigo.ObjetivoEnemigo 
+.ObjetivoAuxiliarEnemigo.ObjetivoEnemigo
   border-color: orange red
   border-style: dashed ridge
   animation-duration: 1s
   animation-iteration-count: infinite
-  animation-direction: alternate 
+  animation-direction: alternate
 
-.ObjetivoAliado 
+.ObjetivoAliado
   border-color: green
   border-style: ridge
   animation: highlightObjetivoAliado
   animation-duration: 1s
   animation-iteration-count: infinite
-  animation-direction: alternate 
+  animation-direction: alternate
 
-.ObjetivoAuxiliarAliado 
+.ObjetivoAuxiliarAliado
   border-color: green
   border-style: dashed
   animation: highlightObjetivoAliado
   animation-duration: 1s
   animation-iteration-count: infinite
-  animation-direction: alternate 
+  animation-direction: alternate
 
-.ObjetivoAuxiliarAliado.ObjetivoAliado 
+.ObjetivoAuxiliarAliado.ObjetivoAliado
   border-color: lightblue green
   border-style: dashed ridge
   animation-duration: 1s
   animation-iteration-count: infinite
-  animation-direction: alternate 
+  animation-direction: alternate
 
 
-@keyframes highlightObjetivoEnemigo 
-  0% 
-    border-color: red 
-  100% 
-    border-color: rgba(255, 0, 0, 0.2)  
+@keyframes highlightObjetivoEnemigo
+  0%
+    border-color: red
+  100%
+    border-color: rgba(255, 0, 0, 0.2)
 
-@keyframes highlightObjetivoAliado 
-  0% 
-    border-color: green 
-  100% 
-    border-color: rgba(0, 255, 0, 0.2)  
-    
+@keyframes highlightObjetivoAliado
+  0%
+    border-color: green
+  100%
+    border-color: rgba(0, 255, 0, 0.2)
 
-// .animacionNumero 
+
+// .animacionNumero
 //   position: absolute
 //   font-size: 100px
 //   background-size: 100%
@@ -205,33 +212,33 @@ $highlightObjetivoColor: red
 //   width: 100%
 //   padding-top: 37.62%
 //   z-index: 10
-//   opacity: 0 
+//   opacity: 0
 
-// .animacionNumero.activo 
+// .animacionNumero.activo
 //   animation: animacionNumero
 //   animation-duration: 1.5s
 //   animation-fill-mode: none
-//   opacity: 0 
+//   opacity: 0
 
-// @keyframes animacionNumero 
-//   0% 
-//     opacity: 1 
-//   50% 
+// @keyframes animacionNumero
+//   0%
+//     opacity: 1
+//   50%
 //     top: -110%
-//     opacity: 1 
-//   100% 
+//     opacity: 1
+//   100%
 //     top: -110%
-//     opacity: 0  
+//     opacity: 0
 
 
 .ocultar
   opacity: 0 !important
 
-.oculto 
-  display: none 
+.oculto
+  display: none
 
-.visible 
-  display: inline 
+.visible
+  display: inline
 
 
 
