Prueba de despliegue 1

--- a/src/app/comun/interfaz/interfaz.component.html
+++ b/src/app/comun/interfaz/interfaz.component.html
@@ -221,7 +221,7 @@
                 <div class="wrapper">
                     <img class="flecha" src="./assets/ui/icons/Icon_07.png"/>
                     <div class="contenedorHechizo borde1">
-                        <img class="imagenHechizo" src="./assets/Habilidades/Spell/17.png"/>
+                      <img class="imagenHechizo" src="./assets/Habilidades/Spell/{{interfazService.hechizoEnemigoImagenId}}.png"/>
                     </div>
                     <img class="flecha" src="./assets/ui/icons/Icon_07.png"/>
                 </div>
