Corrección Fallo Hechizos y regeneración de energía

--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -130,6 +130,7 @@
 
   <panelControlComponent [tipo]="'mazmorra'" [habilitar]="mazmorraService.esTurnoPropio || mazmorraService.permitirMultiControl" (comandoPanelControl)="comandoPanelControl($event)" id="panelControl"></panelControlComponent>
 
+  <atributoComponent id="atributoEnergia" [tipo]="'energia'" [valor]="mazmorraService.sesion.render.heroes[this.mazmorraService.personaje.heroeIndex].energia"></atributoComponent>
 
 <!-- *************************************************
             Panel Acción
