--- a/src/app/comun/mazmorra/mazmorra.component.sass
+++ b/src/app/comun/mazmorra/mazmorra.component.sass
@@ -182,6 +182,12 @@
   width: 50%
   height: 20%
   margin-left: -25%
+#atributoEnergia
+  position: absolute
+  width: 10%
+  height: 10%
+  bottom: 5%
+  right: 25%
 
 #iconoConfiguracion
     position: absolute
